@startuml
skinparam classAttributeIconSize 0

' ==========================
'   PRODUCT HIERARCHY
' ==========================
abstract class Product {
  - id: int
  - name: str
  - price: float
  - weight: float
  + to_row(): dict
}

class Electronics {
  - brand: str
  - warranty_years: int
}

class Clothing {
  - size: str
}

class Book {
  - author: str
  - page_count: int
}

Product <|-- Electronics
Product <|-- Clothing
Product <|-- Book


' ==========================
'   CUSTOMER & REVIEW
' ==========================
class Customer {
  + id: int
  + name: str
  + email: str
}

class Review {
  + id: int
  + customer_id: int
  + product_id: int
  + stars: int
  + comment: str
}

Customer "1" -- "0..*" Review
Product  "1" -- "0..*" Review


' ==========================
'   STORAGE / DATABASE LAYER
' ==========================
class Storage {
  - database_name: str
  - connection
  + connect(): None
  + disconnect(): None
  + query(sql: str, params)
  + fetch_all(sql: str, params): list[dict]
  + save_customer(c): None
  + load_customer(id: int): dict
  + load_all_customers(): list[dict]
  + load_product(id: int): dict
  + load_all_products(): list[dict]
}
@enduml
